[package]
name = "quote"
version = "0.1.0"
authors = ["Al Madireddy <al.madireddy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
futures = "0.3"
tui = "0.14"
termion = "1.5"
tokio = { version = "0.2", features = ["full"] }
alpha_vantage = "0.5.0"

